Basic version of step-by-step and list instructions

--- a/recipe.html
+++ b/recipe.html
@@ -18,6 +18,7 @@
             <div class="header">
                 <div class="recipe-title">Pasta Pasta with Extra Pasta Sauce</div>
                 <div class="wrapper">
+                    <div class="recipe-time">30 Minutes</div>
                     <div class="success-rate">77% Success Rate</div>
                     <span class="recipe-success">
                         <div class="success-bar">
@@ -32,66 +33,184 @@
                 </div>
                 <div class="recipe-author">By: <a href="./userpage.html">pastafreak123</a></div>
                 <div class="recipe-pic"><img src="./img/card.jpg" alt="GIVE ME PASTA OR GIVE ME DEATH"></div>
-                <!--
-                <div class="recipe-timesuccess">
-                    <span class="recipe-time">1 Hour 30 Minutes</span>
-                    <span class="recipe-success"><span class="bold">53%</span> success rate</span>
-                </div>
-                -->
                 <hr width="66%">
                 <div class="wrapper">
-                    <div class="ingredients-list">
+                    <div class="wrapper2">
                         <h3>Ingredients List</h3>
-                        <div class="ingr-row">
-                            <div class="ingr-header"></div>
-                            <div class="ingr-header"></div>
-                            <div class="ingr-header"></div>
-                        </div>
-                        <div class="ingr-row even">
-                            <div class="ingr-cell ingr-num">1</div>
-                            <div class="ingr-cell">Pepper</div>
-                            <div class="ingr-cell"></div>
-                        </div>
-                        <div class="ingr-row">
-                            <div class="ingr-cell ingr-num">2</div>
-                            <div class="ingr-cell">Boxes of Pasta</div>
-                            <div class="ingr-cell"></div>
-                        </div>
-                        <div class="ingr-row even">
-                            <div class="ingr-cell ingr-num">1</div>
-                            <div class="ingr-cell">Teaspoon of Salt</div>
-                            <div class="ingr-cell"></div>
-                        </div>
-                        <div class="ingr-row">
-                            <div class="ingr-cell ingr-num">4</div>
-                            <div class="ingr-cell">Cans of Tomato Sauce</div>
-                            <div class="ingr-cell"></div>
-                        </div>
-                        <div class="ingr-row even">
-                            <div class="ingr-cell ingr-num">10</div>
-                            <div class="ingr-cell">Cups of Water</div>
-                            <div class="ingr-cell"></div>
-                        </div>
-                        <div class="ingr-row">
-                            <div class="ingr-cell ingr-num">1</div>
-                            <div class="ingr-cell">Avocado</div>
-                            <div class="ingr-cell"></div>
-                        </div>
-                        <div class="ingr-row even">
-                            <div class="ingr-cell ingr-num">1</div>
-                            <div class="ingr-cell">Drop of African Children Tears</div>
-                            <div class="ingr-cell swap"><i class="fa fa-refresh"></i></div>
+                        <div class="list">
+                            <div class="ingr-row">
+                                <div class="ingr-header">#</div>
+                                <div class="ingr-header">Ingredient</div>
+                                <div class="ingr-header">Swap</div>
+                            </div>
+                            <div class="ingr-row even">
+                                <div class="ingr-cell ingr-num">1</div>
+                                <div class="ingr-cell">Pepper</div>
+                                <div class="ingr-cell"></div>
+                            </div>
+                            <div class="ingr-row">
+                                <div class="ingr-cell ingr-num">2</div>
+                                <div class="ingr-cell">Boxes of Pasta</div>
+                                <div class="ingr-cell"></div>
+                            </div>
+                            <div class="ingr-row even">
+                                <div class="ingr-cell ingr-num">1</div>
+                                <div class="ingr-cell">Teaspoon of Salt</div>
+                                <div class="ingr-cell"></div>
+                            </div>
+                            <div class="ingr-row">
+                                <div class="ingr-cell ingr-num">4</div>
+                                <div class="ingr-cell">Cans of Tomato Sauce</div>
+                                <div class="ingr-cell"></div>
+                            </div>
+                            <div class="ingr-row even">
+                                <div class="ingr-cell ingr-num">10</div>
+                                <div class="ingr-cell">Cups of Water</div>
+                                <div class="ingr-cell"></div>
+                            </div>
+                            <div class="ingr-row even">
+                                <div class="ingr-cell ingr-num">1</div>
+                                <div class="ingr-cell">Onion</div>
+                                <div class="ingr-cell"></div>
+                            </div>
+                            <div class="ingr-row">
+                                <div class="ingr-cell ingr-num">1</div>
+                                <div class="ingr-cell">Avocado</div>
+                                <div class="ingr-cell"></div>
+                            </div>
+                            <div class="ingr-row even">
+                                <div class="ingr-cell ingr-num">1</div>
+                                <div class="ingr-cell">Drop of African Children Tears</div>
+                                <div class="ingr-cell swap"><i class="fa fa-refresh"></i></div>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="wrapper">
-                    <!-- List View -->
-                    <div class="instructions list">
-
-                    </div>
-                    <!-- Step-By-Step View -->
-                    <div class="instructions carousel">
-
+                    <div class="wrapper2">
+                        <h3>Instructions</h3>
+                        <div class="list instructions-list">
+                            <div class="ingr-row">
+                                <div class="ingr-header">Step</div>
+                                <div class="ingr-header">Instructions</div>
+                            </div>
+                            <div class="ingr-row even">
+                                <div class="ingr-cell ingr-num">1</div>
+                                <div class="ingr-cell">
+                                    Fill a pot with 10 cups of water and teaspoon of salt
+                                </div>
+                            </div>
+                            <div class="ingr-row">
+                                <div class="ingr-cell ingr-num">2</div>
+                                <div class="ingr-cell">
+                                    Set water to boil
+                                </div>
+                            </div>
+                            <div class="ingr-row even">
+                                <div class="ingr-cell ingr-num">3</div>
+                                <div class="ingr-cell">
+                                    While the water is boiling, chop up peppers and onions
+                                </div>
+                            </div>
+                            <div class="ingr-row">
+                                <div class="ingr-cell ingr-num">4</div>
+                                <div class="ingr-cell">
+                                    When the water is bubbling heavily, add 2 boxes of pasta to water
+                                </div>
+                            </div>
+                            <div class="ingr-row even">
+                                <div class="ingr-cell ingr-num">5</div>
+                                <div class="ingr-cell">
+                                    Let pasta cook for 10 minutes, stirring occasionally
+                                </div>
+                            </div>
+                            <div class="ingr-row">
+                                <div class="ingr-cell ingr-num">6</div>
+                                <div class="ingr-cell">
+                                    On the side, heat oil in a pan
+                                </div>
+                            </div>
+                            <div class="ingr-row even">
+                                <div class="ingr-cell ingr-num">7</div>
+                                <div class="ingr-cell">
+                                    Once the oil has heated, add onions to pan
+                                </div>
+                            </div>
+                            <div class="ingr-row">
+                                <div class="ingr-cell ingr-num">8</div>
+                                <div class="ingr-cell">
+                                    Stir often.  After a few minutes, when the onions start to change color, stop heating onions.
+                                </div>
+                            </div>
+                            <div class="ingr-row even">
+                                <div class="ingr-cell ingr-num">9</div>
+                                <div class="ingr-cell">
+                                    After 10 minutes, turn off stove and drain the pasta
+                                </div>
+                            </div>
+                            <div class="ingr-row">
+                                <div class="ingr-cell ingr-num">10</div>
+                                <div class="ingr-cell">
+                                    Once the steam from the pasta has stopped, add peppers, onions and tomato sauce.  Top it off with shredded cheese.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="instructions-step">
+                            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                            <!-- Wrapper for slides -->
+                            <div class="carousel-inner" role="listbox">
+                                <div class="item active">
+                                    <div class="step-num">STEP 1</div>
+                                    <p>Fill a pot with 10 cups of water and teaspoon of salt</p>
+                                </div>
+                                <div class="item">
+                                    <div class="step-num">STEP 2</div>
+                                    <p>Set water to boil</p>
+                                </div>
+                                <div class="item">
+                                    <div class="step-num">STEP 3</div>
+                                    <p>While the water is boiling, chop up peppers and onions</p>
+                                </div>
+                                <div class="item">
+                                    <div class="step-num">STEP 4</div>
+                                    <p>Fill a pot with 10 cups of water and teaspoon of salt</p>
+                                </div>
+                                <div class="item">
+                                    <div class="step-num">STEP 5</div>
+                                    <p>Let pasta cook for 10 minutes, stirring occasionally</p>
+                                </div>
+                                <div class="item">
+                                    <div class="step-num">STEP 6</div>
+                                    <p>On the side, heat oil in a pan</p>
+                                </div>
+                                <div class="item">
+                                    <div class="step-num">STEP 7</div>
+                                    <p>Once the oil has heated, add onions to pan</p>
+                                </div>
+                                <div class="item">
+                                    <div class="step-num">STEP 8</div>
+                                    <p>Stir often.  After a few minutes, when the onions start to change color, stop heating onions.</p>
+                                </div>
+                                <div class="item">
+                                    <div class="step-num">STEP 9</div>
+                                    <p>After 10 minutes, turn off stove and drain the pasta</p>
+                                </div>
+                                <div class="item">
+                                    <div class="step-num">STEP 10</div>
+                                    <p>Once the steam from the pasta has stopped, add peppers, onions and tomato sauce.  Top it off with shredded cheese.</p>
+                                </div>
+                            </div>
+                              <!-- Controls -->
+                              <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left"></span>
+                                <span class="sr-only">Previous</span>
+                              </a>
+                              <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right"></span>
+                                <span class="sr-only">Next</span>
+                              </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <hr width="66%">
