--- a/userpage.html
+++ b/userpage.html
@@ -43,8 +43,10 @@
                 <h2>About Me</h2>
                 <br>
                 <div id="about-me">
-                    <p>I love pasta.  I eat pasta 3 meals a day.  Morning, noon and night I make and eat pasta.  I've made every pasta recipe known to man.  I love pasta.</p>
+                    <p>I love pasta.  I eat pasta 3 meals a day.  Morning, noon and night I make and eat pasta.  I've made every pasta recipe known to man.  I simply love pasta.</p>
                 </div>
+                <br>
+                <button type="button" class="btn btn-default btn-lg" id="change"> Change description </button>
                 <br>
                 <h2>Submitted recipes</h2>
                 <div class="recipes" data-length="3"></div>
@@ -65,6 +67,7 @@
         <!-- Custom JS files for this page -->
         <script src="js/header.js"></script>
         <script src="js/navbar.js"></script>
+        <script src="js/change-text.js"></script>
         <script src="js/card.js"></script>
     </body>
 </html>
