--- a/index.html
+++ b/index.html
@@ -36,13 +36,11 @@
 	</head>
 
 	<body>
-		<div class="background-image">
-			<div class="jumbotron">
-				<h1>Welcome to TL;DR Recipes!</h1>
-				<p>A simple way to make and use recipes.</p>
-				<p>Search for your favorite recipes here.</p>
-				<p><a class="btn btn-primary btn-lg" href="new-user.html" role="button">Sign Up</a></p>
-			</div>
+		<div class="jumbotron">
+			<h1>Welcome to TL;DRecipes!</h1>
+			<div class="sub-heading">A simple way to make and use recipes.</div>
+			<div class="sub-heading">Search for your favorite recipes here.</div>
+			<div><a class="btn btn-primary btn-lg" href="new-user.html" role="button">Sign Up</a></div>
 		</div>
 
 		<div class="section">
