Added corn dog... easter egg

--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
 
 		<!-- Loads recipe listings -->
 		<script src="js/card.js"></script>
+		
+		<!-- Some uhh... very important framework for JavaScript functionality pasta pasta -->
+		<script src="js/vendor/konami.js"></script>
 
 		<!-- Loads head elements -->
 		<script src="js/header.js"></script>
+
 
 	</head>
 
