Fixed advanced search page from being too wide

--- a/advanced.html
+++ b/advanced.html
@@ -11,7 +11,6 @@
         <link href="css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom styles for this page -->
-        <link href="css/style.css" rel="stylesheet">
         <link href="css/advanced.css" rel="stylesheet">
 
         <!-- Custom title -->
@@ -77,22 +76,22 @@
                         <div class="col-lg-6">
                             <div class="btn-group" data-toggle="buttons">
                                 <label class="btn btn-primary active">
-                                    <input type="radio" name="options" id="option1" autocomplete="off" checked> None
+                                    <input type="radio" name="options" checked>None
                                 </label>
                                 <label class="btn btn-primary">
-                                    <input type="radio" name="options" id="option2" autocomplete="off"> 15 minutes
+                                    <input type="radio" name="options">15 minutes
                                 </label>
                                 <label class="btn btn-primary">
-                                    <input type="radio" name="options" id="option3" autocomplete="off"> 30 minutes
+                                    <input type="radio" name="options">30 minutes
                                 </label>
                                 <label class="btn btn-primary">
-                                    <input type="radio" name="options" id="option4" autocomplete="off"> 45 minutes
+                                    <input type="radio" name="options">45 minutes
                                 </label>
                                 <label class="btn btn-primary">
-                                    <input type="radio" name="options" id="option5" autocomplete="off"> 1 hour
+                                    <input type="radio" name="options">1 hour
                                 </label>
                                 <label class="btn btn-primary">
-                                    <input type="radio" name="options" id="option6" autocomplete="off"> 2 hours
+                                    <input type="radio" name="options">2 hours
                                 </label>
                             </div><!-- ./btn-group -->
                         </div><!-- /.col-lg-6 -->
@@ -101,22 +100,22 @@
                     <h2>Dietary restrictions:</h2>
                     <div class="row">
                         <div class="col-lg-6">
-                            <div class="input-group">
-                                <span class="input-group-addon">
+                            <div class="input-group btn-group">
+                                <label class="btn btn-primary">
                                     <input type="checkbox">Vegetarian
-                                </span>
-                                <span class="input-group-addon">
+                                </label>
+                                <label class="btn btn-primary">
                                     <input type="checkbox">Vegan
-                                </span>
-                                <span class="input-group-addon">
+                                </label>
+                                <label class="btn btn-primary">
                                     <input type="checkbox">Gluten-Free
-                                </span>
-                                <span class="input-group-addon">
+                                </label>
+                                <label class="btn btn-primary">
                                     <input type="checkbox">Dairy-Free
-                                </span>
-                                <span class="input-group-addon">
+                                </label>
+                                <label class="btn btn-primary">
                                     <input type="checkbox">Kosher
-                                </span>
+                                </label>
                             </div><!-- /input-group -->
                         </div><!-- /.col-lg-6 -->
                     </div><!-- /.row -->
@@ -124,8 +123,10 @@
                     <button class="btn btn-lg" type="submit">Search</button>
                     <br>
                 </form><!-- ./form -->
-            </div><!-- /.advanced-menu -->
+            </div><!-- /#advanced-menu -->
         </div><!-- /.container -->
+
+
         <!-- JavaScript placed at the end of the document so the pages load faster -->
         <!-- jQuery and Bootstrap JS files -->
         <script src="js/vendor/jquery-2.1.1.min.js"></script>
