Fixed js/css paths

--- a/sign-in.html
+++ b/sign-in.html
@@ -34,10 +34,10 @@
         </div> <!-- /container -->
         <!-- JavaScript placed at the end of the document so the pages load faster -->
         <!-- jQuery and Bootstrap JS files -->
-        <script src="../js/vendor/jquery-2.1.1.min.js"></script>
-        <script src="../js/vendor/bootstrap.min.js"></script>
+        <script src="js/vendor/jquery-2.1.1.min.js"></script>
+        <script src="js/vendor/bootstrap.min.js"></script>
         <!-- Custom JS files for this page -->
-        <script src="../js/header.js"></script>
-        <script src="../allen/navbar.js"></script>
+        <script src="js/header.js"></script>
+        <script src="allen/navbar.js"></script>
     </body>
 </html>
