--- a/new-user.html
+++ b/new-user.html
@@ -34,6 +34,6 @@
         <script src="js/vendor/bootstrap.min.js"></script>
         <!-- Custom JS files for this page -->
         <script src="js/header.js"></script>
-        <script src="allen/navbar.js"></script>
+        <script src="js/navbar.js"></script>
     </body>
 </html>
