--- a/search-results.html
+++ b/search-results.html
@@ -18,6 +18,7 @@
 		
 		<!-- Custom styles for this template -->
 		<link href="css/browse.css" rel="stylesheet">
+		<link href="css/search-results.css" rel="stylesheet">
 
 		<!-- Bootstrap core JavaScript -->
 		<!-- Placed at the end of the document so the pages load faster -->
@@ -43,6 +44,23 @@
 		<div class="section">
 			<div class="container">
 				<h2>Search Results</h2>
+				<div class="search-filter">
+					<label>Show By: </label>
+					<span>
+						<select class="form-control recipe-filter">
+							<option value="0">Highest Success Rate</option>
+							<option value="1">Most Popular</option>
+							<option value="2">Newest Submitted</option>
+							<option value="3">Oldest Submitted</option>
+						</select>
+						<select class="form-control user-filter">
+							<option value="0">Username</option>
+							<option value="1">Most Recipes</option>
+							<option value="2">Newest Joined</option>
+							<option value="3">Oldest Joined</option>
+						</select>
+					</span>
+				</div>
 			</div>
 		</div>
 
