Minor changes on the menu to add slogan

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 	<body>
 		<div class="jumbotron">
 			<h1>Welcome to TL;DRecipes!</h1>
-			<div class="sub-heading">A simple way to make and use recipes.</div>
+			<h2>Recipes for the average college kid</h2>
 			<div class="sub-heading">Search for your favorite recipes here.</div>
-			<div><a class="btn btn-primary btn-lg" href="new-user.html" role="button">Sign Up</a></div>
+			<div><a class="btn btn-primary btn-lg" href="new-user.html" role="button">Getting Started</a></div>
 		</div>
 
 		<div class="section">
