--- a/recipe.html
+++ b/recipe.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
         <title>Pasta Recipe</title>
@@ -68,19 +68,19 @@
                                 <div class="ingr-cell">Cups of Water</div>
                                 <div class="ingr-cell"></div>
                             </div>
-                            <div class="ingr-row even">
+                            <div class="ingr-row">
                                 <div class="ingr-cell ingr-num">1</div>
                                 <div class="ingr-cell">Onion</div>
                                 <div class="ingr-cell"></div>
                             </div>
-                            <div class="ingr-row">
+                            <div class="ingr-row even">
                                 <div class="ingr-cell ingr-num">1</div>
                                 <div class="ingr-cell">Avocado</div>
                                 <div class="ingr-cell"></div>
                             </div>
-                            <div class="ingr-row even">
+                            <div class="ingr-row">
                                 <div class="ingr-cell ingr-num">1</div>
-                                <div class="ingr-cell">Drop of African Children Tears</div>
+                                <div class="ingr-cell">Cup of Cheese</div>
                                 <div class="ingr-cell swap"><i class="fa fa-refresh"></i></div>
                             </div>
                         </div>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="wrapper">
                     <div class="wrapper2">
-                        <h3>Instructions</h3>
+                        <h3 id="instructions">Instructions</h3>
                         <div class="list instructions-list">
                             <div class="ingr-row">
                                 <div class="ingr-header">Step</div>
