--- a/submit1.html
+++ b/submit1.html
@@ -22,8 +22,8 @@
             <section>
                 <div class="name form-group">
                     <div class="wrapper">
-                        <label id="name-label" for="name-input">Recipe Name</label>
-                        <input type="text" id="name-input" class="form-control"></input>
+                        <label id="name-label" for="name-input">Write the name of your recipe:</label>
+                        <input type="text" id="name-input" class="form-control" placeholder="Example: Macaroni and Cheese"></input>
                     </div>
                 </div>
             </section>
@@ -31,10 +31,11 @@
                 <div class="upload">
                     <form action="./" class="dropzone" id="dropzoneUpload">
                         <div class="dz-default dz-message">
-                            <span>Click here to upload recipe images</span>
+                            <span>Click here or drag images to this region to upload recipe images.
+                            <br>Upload as many images as you want.</span>
                         </div>
                     </form>
-                    <div>
+                </div>
             </section>
             <section>
                 <div class="time">
@@ -58,19 +59,19 @@
                         <div class="btn-group">
                             <div class="dropdown">
                                 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
-                                Dropdown
+                                    Dropdown
                                     <span class="caret"></span>
                                 </button>
-                                <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1" style="background: #ffffff">
-                                    <li role="presentation"><a role="menuitem" tabindex="-1">10 Minutes</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1">15 Minutes</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1">30 Minutes</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1">45 Minutes</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1">1 Hour</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1">1.5 Hours</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1">2 Hours</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1">3 Hours</a></li>
-                                </ul>
+                                    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1" style="background: #ffffff">
+                                        <li role="presentation"><a role="menuitem" tabindex="-1">10 Minutes</a></li>
+                                        <li role="presentation"><a role="menuitem" tabindex="-1">15 Minutes</a></li>
+                                        <li role="presentation"><a role="menuitem" tabindex="-1">30 Minutes</a></li>
+                                        <li role="presentation"><a role="menuitem" tabindex="-1">45 Minutes</a></li>
+                                        <li role="presentation"><a role="menuitem" tabindex="-1">1 Hour</a></li>
+                                        <li role="presentation"><a role="menuitem" tabindex="-1">1.5 Hours</a></li>
+                                        <li role="presentation"><a role="menuitem" tabindex="-1">2 Hours</a></li>
+                                        <li role="presentation"><a role="menuitem" tabindex="-1">3 Hours</a></li>
+                                    </ul>
                             </div>
                             <!--
                             <button type="button" id="dropdownmenu1" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Select a Time  <span class="caret"></span>
@@ -88,6 +89,7 @@
                             </ul>
                         </div>
                         -->
+                        </div>
                     </div>
                 </div>
             </section>
