Fixed search results page filter not being responsive

--- a/search-results.html
+++ b/search-results.html
@@ -44,22 +44,24 @@
 		<div class="section">
 			<div class="container">
 				<h2>Search Results</h2>
-				<div class="search-filter">
-					<label>Show By: </label>
-					<span>
-						<select class="form-control recipe-filter">
-							<option value="0">Highest Success Rate</option>
-							<option value="1">Most Popular</option>
-							<option value="2">Newest Submitted</option>
-							<option value="3">Oldest Submitted</option>
-						</select>
-						<select class="form-control user-filter">
-							<option value="0">Username</option>
-							<option value="1">Most Recipes</option>
-							<option value="2">Newest Joined</option>
-							<option value="3">Oldest Joined</option>
-						</select>
-					</span>
+				<div class="listing-wrapper">
+					<div class="search-filter listing-inner-wrapper">
+						<label>Show By: </label>
+						<span class="search-filter-wrapper">
+							<select class="form-control recipe-filter">
+								<option value="0">Highest Success Rate</option>
+								<option value="1">Most Popular</option>
+								<option value="2">Newest Submitted</option>
+								<option value="3">Oldest Submitted</option>
+							</select>
+							<select class="form-control user-filter">
+								<option value="0">Username</option>
+								<option value="1">Most Recipes</option>
+								<option value="2">Newest Joined</option>
+								<option value="3">Oldest Joined</option>
+							</select>
+						</span>
+					</div>
 				</div>
 			</div>
 		</div>
