--- a/submit2.html
+++ b/submit2.html
@@ -20,28 +20,28 @@
                 <div class="step">STEP 2</div>
             </div>
             <section>
-                <label id="ingredients-label" for="ingredients-input">Ingredients</label>
+                <label id="ingredients-label" for="ingredients-input">Ingredients Needed:</label>
                 <div class="ingredients-input">
                     <div class="wrapper">
                         <div class="ing-wr">
                             <div class="ing-row">
-                                <div class="ing-header">#</div>
-                                <div class="ing-header">Ingredient Name</div>
+                                <div class="ing-header">Amount:</div>
+                                <div class="ing-header">Ingredient name:</div>
                             </div>
                             <div class="ing-row">
-                                <div class="ing-cell"><input class="ing-num form-control" type="text" maxlength="2"></div>
+                                <div class="ing-cell"><input class="ing-num form-control" type="text" maxlength="5"></div>
                                 <div class="ing-cell"><input class="ing-name form-control" type="text"></div>
                             </div>
                             <div class="ing-row">
-                                <div class="ing-cell"><input class="ing-num form-control" type="text" maxlength="2"></div>
+                                <div class="ing-cell"><input class="ing-num form-control" type="text" maxlength="5"></div>
                                 <div class="ing-cell"><input class="ing-name form-control" type="text"></div>
                             </div>
                             <div class="ing-row">
-                                <div class="ing-cell"><input class="ing-num form-control" type="text" maxlength="2"></div>
+                                <div class="ing-cell"><input class="ing-num form-control" type="text" maxlength="5"></div>
                                 <div class="ing-cell"><input class="ing-name form-control" type="text"></div>
                             </div>
                         </div>
-                        <button id="ingAdd" class="btn btn-default" type="submit"><i class="fa fa-plus fa-1x"></i><span id="button-text">Add Ingredient</span></button> 
+                        <button id="ingAdd" class="btn btn-default" type="submit"><i class="fa fa-plus fa-1x"></i><span id="button-text">Add another ingredient...</span></button> 
                     </div>
                 </div>
             </section>
