--- a/submit1.html
+++ b/submit1.html
@@ -96,7 +96,7 @@
             </section>
             <section>
                 <div class="dietary-rest">
-                    <label for="dietary-input">Dietary Restrictions</label>
+                    <label for="dietary-input">Dietary Restrictions:</label>
                     <div id="dietary-input">
                         <label class="checkbox-inline"></label>
                         <input type="checkbox" id="inlineCheckbox1" value="Veg-option">
