--- a/submit2.html
+++ b/submit2.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Step 2 : Submit a Recipe</title>
+        <title>Step 2: Ingredients</title>
         <!-- Bootstrap core CSS -->
         <link href="./css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom CSS files for this page -->
@@ -17,7 +17,7 @@
         <div class="content">
             <div class="header">
                 <div class="title">Submit A Recipe</div>
-                <div class="step">STEP 2</div>
+                <div class="step">STEP 2: Ingredients and replacements</div>
             </div>
             <section>
                 <label id="ingredients-label" for="ingredients-input">Ingredients Needed:</label>
