--- a/submit3.html
+++ b/submit3.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Step 3 : Submit a Recipe</title>
+        <title>Step 3: Instructions</title>
         <!-- Bootstrap core CSS -->
         <link href="./css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom styles for this page -->
@@ -17,16 +17,16 @@
         <div class="content">
             <div class="header">
                 <div class="title">Submit A Recipe</div>
-                <div class="step">STEP 3</div>
+                <div class="step">STEP 3: Recipe instructions</div>
             </div>
             <section>
-                <label id="ingredients-label" for="ingredients-input">Step-by-Step Instructions</label>
+                <label id="ingredients-label" for="ingredients-input">Step-by-Step Instructions:</label>
                 <div class="ingredients-input">
                     <div class="wrapper">
                         <div class="ing-wr">
                             <div class="ing-row">
-                                <div class="ing-header">Step #</div>
-                                <div class="ing-header">Step Instructions</div>
+                                <div class="ing-header">Step #:</div>
+                                <div class="ing-header">Instruction:</div>
                             </div>
                             <div class="ing-row">
                                 <div class="ing-cell"><span class="step-icon">1</span></div>
