--- a/submit4.html
+++ b/submit4.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Recipe Submitted</title>
+        <title>Recipe Submitted!</title>
         <!-- Bootstrap core CSS -->
         <link href="./css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom styles for this page -->
@@ -16,7 +16,8 @@
     <body>
         <div class="content">
             <div class="thanks">
-                <h3>Recipe submitted!</h3>
+                <br><br><br><br>
+                <h3>Recipe submitted successfully!</h3>
                 <p>Thank you for your submission!</p>
                 <a href="./index.html">Back to Home Page</a>
             </div>
