Added more pasta to home page

--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
 		<!-- Loads head elements -->
 		<script src="js/header.js"></script>
 
+		<script src="js/index.js"></script>
 
 	</head>
 
 	<body>
 		<div class="jumbotron">
-			<h1>Welcome to TL;DRecipes!</h1>
+			<h1>Welcome to TL<a id="snow-link" href="">;D</a>Recipes!</h1>
 			<h2>Recipes for the average college kid</h2>
 			<div class="sub-heading">Search for your favorite recipes here.</div>
 			<div><a class="btn btn-primary btn-lg" href="new-user.html" role="button">Getting Started</a></div>
