--- a/recipe.html
+++ b/recipe.html
@@ -88,8 +88,8 @@
                 </div>
                 <div class="wrapper">
                     <div class="wrapper2">
-                        <h3 id="instructions">Instructions</h3>
-                        <div class="list instructions-list">
+                        <h3>Instructions</h3>
+                        <div class="list">
                             <div class="ingr-row">
                                 <div class="ingr-header">Step</div>
                                 <div class="ingr-header">Instructions</div>
@@ -155,7 +155,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="instructions-step">
+                </div>
+                <div class="wrapper">
+                    <div class="instructions-step">
                             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                             <!-- Wrapper for slides -->
                             <div class="carousel-inner" role="listbox">
@@ -211,7 +213,6 @@
                               </a>
                             </div>
                         </div>
-                    </div>
                 </div>
                 <hr width="66%">
                 <div class="wrapper">
