--- a/submit1.html
+++ b/submit1.html
@@ -11,7 +11,39 @@
         <link href="./css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom CSS files for this page -->
         <link href="./css/font-awesome.min.css" rel="stylesheet">
+        <link href="./css/fineuploader-5.0.9.css" rel="stylesheet">
         <link href="./css/submit.css" rel="stylesheet">
+        <script type="text/template" id="qq-simple-thumbnails-template">
+          <div class="qq-uploader-selector qq-uploader">
+            <div class="qq-upload-drop-area-selector qq-upload-drop-area" qq-hide-dropzone>
+              <span>Drop files here to upload</span>
+            </div>
+            <div class="qq-upload-button-selector qq-upload-button">
+              <div>Upload a file</div>
+            </div>
+            <span class="qq-drop-processing-selector qq-drop-processing">
+              <span>Processing dropped files...</span>
+              <span class="qq-drop-processing-spinner-selector qq-drop-processing-spinner"></span>
+            </span>
+            <ul class="qq-upload-list-selector qq-upload-list">
+              <li>
+                <div class="qq-progress-bar-container-selector">
+                  <div class="qq-progress-bar-selector qq-progress-bar"></div>
+                </div>
+                <span class="qq-upload-spinner-selector qq-upload-spinner"></span>
+                <img class="qq-thumbnail-selector" qq-max-size="100" qq-server-scale>
+                <span class="qq-edit-filename-icon-selector qq-edit-filename-icon"></span>
+                <span class="qq-upload-file-selector qq-upload-file"></span>
+                <input class="qq-edit-filename-selector qq-edit-filename" tabindex="0" type="text">
+                <span class="qq-upload-size-selector qq-upload-size"></span>
+                <a class="qq-upload-cancel-selector qq-upload-cancel" href="#">Cancel</a>
+                <a class="qq-upload-retry-selector qq-upload-retry" href="#">Retry</a>
+                <a class="qq-upload-delete-selector qq-upload-delete" href="#">Delete</a>
+                <span class="qq-upload-status-text-selector qq-upload-status-text"></span>
+              </li>
+            </ul>
+          </div>
+        </script>
     </head>
     <body>
         <div class="content">
@@ -37,6 +69,9 @@
                         </div>
                     </form>
                 </div>
+            </section>
+            <section>
+                <div id="thumbnail-fine-uploader"></div>
             </section>
             <section>
                 <div class="time">
@@ -132,13 +167,14 @@
                 </div>
             </section>
         </div>
-        <!-- JavaScript placed at the end of the document so the pages load faster -->
-        <script src="./js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
-        <script src="./js/vendor/bootstrap.min.js" type="text/javascript"></script>
-        <script src="./js/vendor/dropzone.js" type="text/javascript"></script>
-        <script src="./js/vendor/jquery-2.1.1.min.js"></script>
-        <script src="./js/header.js" type="text/javascript"></script>
-        <script src="./js/navbar.js"></script>
-        <script src="./js/submit.js"></script>
     </body>
+    <!-- JavaScript placed at the end of the document so the pages load faster -->
+    <script src="./js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
+    <script src="./js/vendor/bootstrap.min.js" type="text/javascript"></script>
+    <script src="./js/vendor/dropzone.js" type="text/javascript"></script>
+    <script src="./js/vendor/jquery-2.1.1.min.js"></script>
+    <script src="./js/vendor/fineuploader-5.0.9.js"></script>
+    <script src="./js/header.js" type="text/javascript"></script>
+    <script src="./js/navbar.js"></script>
+    <script src="./js/submit.js"></script>
 </html>
