--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<h1>Welcome to TL<a id="snow-link" href="">;D</a>Recipes!</h1>
 			<h2>Recipes for the average college kid</h2>
 			<div class="sub-heading">Search for your favorite recipes here.</div>
-			<div><a class="btn btn-primary btn-lg" href="new-user.html" role="button">Getting Started</a></div>
+			<div><a class="btn btn-primary btn-lg" href="help.html" role="button">Getting Started</a></div>
 		</div>
 
 		<div class="section">
